fix z-index

--- a/css/main.css
+++ b/css/main.css
@@ -50,6 +50,7 @@ body {
 
 .link {
   display: inline-block;
+  position: relative;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -108,21 +109,12 @@ body {
   fill: currentColor;
 }
 
-.link__lift {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-}
-
 .link--up {
   display: none;
   position: fixed;
   right: 30px;
   bottom: 30%;
-  z-index: 5;
+  z-index: 1;
 }
 
 .list__contact, .list__contact-footer {
